--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,131 +1,49 @@
-name: Deploy to GoDaddy
+name: Pull latest on server (pll-app.asc-nest.org)
 
 on:
   push:
     branches: [main]
-  workflow_dispatch: # Allow manual deployment
+  workflow_dispatch:
 
 jobs:
-  test:
+  pull:
     runs-on: ubuntu-latest
-    name: Test Application
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
+      - name: Start ssh-agent
+        uses: webfactory/ssh-agent@v0.9.0
         with:
-          php-version: "8.2"
-          extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite, dom, filter, gd, iconv, json, mbstring, pdo, mysql
+          ssh-private-key: ${{ secrets.PROD_SSH_KEY }}
 
-      - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-
-      - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-
-      - name: Generate key
-        run: php artisan key:generate
-
-      - name: Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
-
-      - name: Create Database
+      - name: Trust host
         run: |
-          mkdir -p database
-          touch database/database.sqlite
+          mkdir -p ~/.ssh
+          ssh-keyscan -H ${{ secrets.PROD_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
+      - name: Pull + Laravel maintenance
         env:
-          DB_CONNECTION: sqlite
-          DB_DATABASE: database/database.sqlite
-        run: php artisan test
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: test
-    name: Deploy to GoDaddy
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Deploy to GoDaddy Server
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.GODADDY_HOST }}
-          username: ${{ secrets.GODADDY_USERNAME }}
-          password: ${{ secrets.GODADDY_PASSWORD }}
-          port: ${{ secrets.GODADDY_PORT }}
-          timeout: 300s
-          script: |
-            set -e
-
-            echo "🚀 Starting deployment to GoDaddy..."
-
-            # Navigate to project directory
-            cd ${{ secrets.GODADDY_PROJECT_PATH }}
-
-            # Put application in maintenance mode
-            echo "📱 Putting application in maintenance mode..."
-            php artisan down || echo "App already down or first deployment"
-
-            # Create backup
-            echo "💾 Creating backup..."
-            BACKUP_DIR="/home/${{ secrets.GODADDY_USERNAME }}/backups"
-            mkdir -p $BACKUP_DIR
-            BACKUP_NAME="backup_$(date +%Y%m%d_%H%M%S)"
-            cp -r . $BACKUP_DIR/$BACKUP_NAME || echo "Backup creation failed, continuing..."
-
-            # Pull latest changes
-            echo "📥 Pulling latest changes from GitHub..."
-            git fetch origin
-            git reset --hard origin/main
-
-            # Install/update dependencies
-            echo "📦 Installing/updating composer dependencies..."
-            composer install --no-dev --optimize-autoloader --no-interaction
-
-            # Clear all caches
-            echo "🧹 Clearing caches..."
-            php artisan config:clear
-            php artisan cache:clear
-            php artisan route:clear
-            php artisan view:clear
-
-            # Run database migrations
-            echo "🗄️ Running database migrations..."
-            php artisan migrate --force
-
-            # Cache for performance
-            echo "⚡ Caching for performance..."
-            php artisan config:cache
-            php artisan route:cache
-            php artisan view:cache
-
-            # Create storage symlink if needed
-            echo "🔗 Creating storage symlink..."
-            php artisan storage:link || echo "Symlink already exists"
-
-            # Set proper permissions
-            echo "🔐 Setting proper permissions..."
-            find . -type f -exec chmod 644 {} \;
-            find . -type d -exec chmod 755 {} \;
-            chmod -R 775 storage
-            chmod -R 775 bootstrap/cache
-
-            # Bring application back up
-            echo "🟢 Bringing application back online..."
-            php artisan up
-
-            echo "✅ Deployment completed successfully!"
-            echo "📊 Backup created at: $BACKUP_DIR/$BACKUP_NAME"
-
-      - name: Deployment Status
-        if: failure()
+          PHP_BIN: ${{ secrets.PHP_BIN }}
         run: |
-          echo "❌ Deployment failed!"
-          exit 1
+          ssh ${{ secrets.PROD_USER }}@${{ secrets.PROD_HOST }} << 'EOF'
+          set -e
+          cd "${PROD_REMOTE_PATH:-/home/jhtewsbw2mz0/public_html/pll-app.asc-nest.org}"
+
+          git fetch origin main
+          git reset --hard origin/main
+          git clean -fdx \
+            -e storage \
+            -e vendor \
+            -e .env \
+            -e cgi-bin \
+            -e public/.well-known
+
+          if [ -f composer.phar ]; then
+            ${PHP_BIN:-/usr/local/bin/php} composer.phar install --no-dev --prefer-dist --optimize-autoloader
+          elif command -v composer >/dev/null 2>&1; then
+            composer install --no-dev --prefer-dist --optimize-autoloader
+          fi
+
+          ${PHP_BIN:-/usr/local/bin/php} artisan migrate --force || true
+          ${PHP_BIN:-/usr/local/bin/php} artisan config:cache
+          ${PHP_BIN:-/usr/local/bin/php} artisan route:cache
+          EOF
